--- a/ontology.ipynb
+++ b/ontology.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPcs2ao7VFRFeYIwpzxu0ew",
+      "history_visible": true,
+      "authorship_tag": "ABX9TyPKih2N7A0mFzIQ16s30xia",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,6 +113,48 @@
         "    pass\n",
         "\n",
         "  class Furniture(Thing):\n",
+        "    pass\n",
+        "\n",
+        "  class Stationery(Thing):\n",
+        "    pass\n",
+        "\n",
+        "  class Vehicle(Thing):\n",
+        "    pass\n",
+        "  class Two_Wheels(Thing):\n",
+        "    pass\n",
+        "  class Four_Wheels(Thing):\n",
+        "    pass\n",
+        "\n",
+        "  class Places(Thing):\n",
+        "    pass\n",
+        "  class City(Thing):\n",
+        "    pass\n",
+        "  class Country(Thing):\n",
+        "    pass\n",
+        "  class Terrain(Thing):\n",
+        "    pass\n",
+        "  class Ocean(Thing):\n",
+        "    pass\n",
+        "  class River(Thing):\n",
+        "    pass\n",
+        "  class Mountain(Thing):\n",
+        "    pass\n",
+        "  class Building(Thing):\n",
+        "    pass\n",
+        "  class Monument(Thing):\n",
+        "    pass\n",
+        "\n",
+        "  class People(Thing):\n",
+        "    pass\n",
+        "  class Celebrity(Thing):\n",
+        "    pass\n",
+        "  class Historical_Figure(Thing):\n",
+        "    pass\n",
+        "  class Profession(Thing):\n",
+        "    pass\n",
+        "  class Gender(Thing):\n",
+        "    pass\n",
+        "  class Race(Thing):\n",
         "    pass\n",
         "\n",
         "  # properties\n",
