--- a/ontology.ipynb
+++ b/ontology.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "history_visible": true,
-      "authorship_tag": "ABX9TyPKih2N7A0mFzIQ16s30xia",
+      "authorship_tag": "ABX9TyPYmVfnCUd50TfUkZvkinUn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,41 +120,41 @@
         "\n",
         "  class Vehicle(Thing):\n",
         "    pass\n",
-        "  class Two_Wheels(Thing):\n",
+        "  class Two_Wheels(Vehicle):\n",
         "    pass\n",
-        "  class Four_Wheels(Thing):\n",
+        "  class Four_Wheels(Vehicle):\n",
         "    pass\n",
         "\n",
-        "  class Places(Thing):\n",
+        "  class Place(Thing):\n",
         "    pass\n",
-        "  class City(Thing):\n",
+        "  class City(Place):\n",
         "    pass\n",
-        "  class Country(Thing):\n",
+        "  class Country(Place):\n",
         "    pass\n",
-        "  class Terrain(Thing):\n",
+        "  class Terrain(Place):\n",
         "    pass\n",
-        "  class Ocean(Thing):\n",
+        "  class Ocean(Place):\n",
         "    pass\n",
-        "  class River(Thing):\n",
+        "  class River(Place):\n",
         "    pass\n",
-        "  class Mountain(Thing):\n",
+        "  class Mountain(Place):\n",
         "    pass\n",
-        "  class Building(Thing):\n",
+        "  class Building(Place):\n",
         "    pass\n",
-        "  class Monument(Thing):\n",
+        "  class Monument(Place):\n",
         "    pass\n",
         "\n",
         "  class People(Thing):\n",
         "    pass\n",
-        "  class Celebrity(Thing):\n",
+        "  class Celebrity(People):\n",
         "    pass\n",
-        "  class Historical_Figure(Thing):\n",
+        "  class Historical_Figure(People):\n",
         "    pass\n",
-        "  class Profession(Thing):\n",
+        "  class Profession(People):\n",
         "    pass\n",
-        "  class Gender(Thing):\n",
+        "  class Gender(People):\n",
         "    pass\n",
-        "  class Race(Thing):\n",
+        "  class Race(People):\n",
         "    pass\n",
         "\n",
         "  # properties\n",
