Updated the ontology to include adjectives, actions, prepositions, and partially-defined vegetables

--- a/ontology.ipynb
+++ b/ontology.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "history_visible": true,
-      "authorship_tag": "ABX9TyPYmVfnCUd50TfUkZvkinUn",
+      "authorship_tag": "ABX9TyM01CBpOqVo80ToDqw6sBbh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,9 +119,11 @@
         "\n",
         "  class Vehicle(Thing):\n",
         "    pass\n",
-        "  class Two_Wheels(Vehicle):\n",
+        "  class Land_Vehicle(Vehicle):\n",
         "    pass\n",
-        "  class Four_Wheels(Vehicle):\n",
+        "  class Water_Vehicle(Vehicle):\n",
+        "    pass\n",
+        "  class Aerial_Vehicle(Vehicle):\n",
         "    pass\n",
         "\n",
         "  class Place(Thing):\n",
@@ -157,6 +158,48 @@
         "  class Race(People):\n",
         "    pass\n",
         "\n",
+        "  class Body_Part(Thing):\n",
+        "    pass\n",
+        "\n",
+        "  class Season(Thing):\n",
+        "    pass\n",
+        "\n",
+        "  class Climate(Thing):\n",
+        "    pass\n",
+        "\n",
+        "  class Gadget(Thing):\n",
+        "    pass\n",
+        "  class Portable(Gadget):\n",
+        "    pass\n",
+        "  class Unportable(Gadget):\n",
+        "    pass\n",
+        "\n",
+        "  class Event(Thing):\n",
+        "    pass\n",
+        "  class Party(Event):\n",
+        "    pass\n",
+        "  class Holiday(Event):\n",
+        "    pass\n",
+        "  class Exam(Event):\n",
+        "    pass\n",
+        "  class Game(Event):\n",
+        "    pass\n",
+        "  class Concert(Event):\n",
+        "    pass\n",
+        "\n",
+        "  class Celestial_Body(Thing):\n",
+        "    pass\n",
+        "  class Planet(Celestial_Body):\n",
+        "    pass\n",
+        "  class Asteroid(Celestial_Body):\n",
+        "    pass\n",
+        "  class Star(Celestial_Body):\n",
+        "    pass\n",
+        "  class Constellation(Celestial_Body):\n",
+        "    pass\n",
+        "  class Satellite(Celestial_Body):\n",
+        "    pass\n",
+        "\n",
         "  # properties\n",
         "\n",
         "  class Color(Thing):\n",
@@ -168,6 +211,13 @@
         "  class Taste(Thing):\n",
         "    pass\n",
         "  class Emotion(Thing):\n",
+        "    pass\n",
+        "\n",
+        "  # action, position\n",
+        "\n",
+        "  class Action(Thing):\n",
+        "    pass\n",
+        "  class Position(Thing):\n",
         "    pass"
       ],
       "metadata": {
@@ -181,22 +231,317 @@
       "source": [
         "# defining role and relationships\n",
         "\n",
-        "    class has_color(ObjectProperty):\n",
-        "        domain = [Food]\n",
-        "        range = [Color]\n",
-        "    class has_shape(ObjectProperty):\n",
-        "        domain = [Food]\n",
-        "        range = [Shape]\n",
-        "    class has_size(ObjectProperty):\n",
-        "        domain = [Food]\n",
-        "        range = [Size]\n",
-        "    class has_taste(ObjectProperty):\n",
-        "        domain = [Food]\n",
-        "        range = [Taste]\n",
-        "    class"
+        "  class has_color(ObjectProperty):\n",
+        "      domain = [Food, Animal, Furniture, Stationery, Vehicle, Place, People, Climate, Gadget]\n",
+        "      range = [Color]\n",
+        "  class has_shape(ObjectProperty):\n",
+        "      domain = [Food, Furniture, Stationery, Celestial_Body]\n",
+        "      range = [Shape]\n",
+        "  class has_size(ObjectProperty):\n",
+        "      domain = [Food, Animal, Furniture, Stationery, Vehicle, Place, People, Body_Part, Gadget, Celestial_Body]\n",
+        "      range = [Size]\n",
+        "  class has_taste(ObjectProperty):\n",
+        "      domain = [Food]\n",
+        "      range = [Taste]\n",
+        "  class has_emotion(ObjectProperty):\n",
+        "      domain = [Animal, People]\n",
+        "      range = [Emotion]"
       ],
       "metadata": {
         "id": "L_HKimNihepc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# defining possible colors\n",
+        "\n",
+        "  purple = Color('purple')\n",
+        "  pink = Color('pink')\n",
+        "  neon_pink = Color('neon_pink')\n",
+        "  pastel_pink = Color('pastel_pink')\n",
+        "  dark_blue = Color('dark_blue')\n",
+        "  light_blue = Color('light_blue')\n",
+        "  neon_blue = Color('neon_blue')\n",
+        "  pastel_blue = Color('pastel_blue')\n",
+        "  teal = Color('teal')\n",
+        "  dark_green = Color('dark_green')\n",
+        "  light_green = Color('light_green')\n",
+        "  neon_green = Color('neon_green')\n",
+        "  pastel_green = Color('pastel_green')\n",
+        "  yellow = Color('yellow')\n",
+        "  amber = Color('amber')\n",
+        "  orange = Color('orange')\n",
+        "  red = Color('red')\n",
+        "  maroon = Color('maroon')\n",
+        "  brown = Color('brown')\n",
+        "  black = Color('black')\n",
+        "  gray = Color('gray')\n",
+        "  white = Color('white')\n",
+        "  gold = Color('gold')\n",
+        "  silver = Color('silver')\n",
+        "  beige = Color('beige')"
+      ],
+      "metadata": {
+        "id": "2F2eucemBr8S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  # defining possible shapes\n",
+        "\n",
+        "  square = Shape('square')\n",
+        "  rectangular = Shape('rectangular')\n",
+        "  circular = Shape('circular')\n",
+        "  triangular = Shape('triangular')\n",
+        "  round = Shape('round')\n",
+        "  blocky = Shape('blocky')\n",
+        "  pointy = Shape('pointy')\n",
+        "  pear_shaped = Shape('pear_shaped')\n",
+        "  conical = Shape('conical')\n",
+        "  cone = Shape('cone')\n",
+        "  cylindrical = Shape('cylindrical')\n",
+        "  spherical = Shape('spherical')\n",
+        "  solid = Shape('solid')\n",
+        "  liquid = Shape('liquid')\n",
+        "  oblate = Shape('oblate')"
+      ],
+      "metadata": {
+        "id": "Y9_79TRIDn74"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  # defining possible sizes\n",
+        "\n",
+        "  big = Size('big')\n",
+        "  broad = Size('broad')\n",
+        "  bulky = Size('bulky')\n",
+        "  chunky = Size('chunky')\n",
+        "  enormous = Size('enormous')\n",
+        "  fat = Size('fat')\n",
+        "  giant = Size('giant')\n",
+        "  heavy = Size('heavy')\n",
+        "  huge = Size('huge')\n",
+        "  lanky = Size('lanky')\n",
+        "  large = Size('large')\n",
+        "  lean = Size('lean')\n",
+        "  little = Size('little')\n",
+        "  narrow = Size('narrow')\n",
+        "  petite = Size('petite')\n",
+        "  plump = Size('plump')\n",
+        "  short = Size('short')\n",
+        "  slim = Size('slim')\n",
+        "  small = Size('small')\n",
+        "  stout = Size('stout')\n",
+        "  tall = Size('tall')\n",
+        "  thick = Size('thick')\n",
+        "  thin = Size('thin')\n",
+        "  tiny = Size('tiny')\n",
+        "  wide = Size('wide')"
+      ],
+      "metadata": {
+        "id": "MSZHR9jCEcPg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  # defining possible tastes\n",
+        "\n",
+        "  bitter = Taste('bitter')\n",
+        "  fishy = Taste('fishy')\n",
+        "  fruity = Taste('fruity')\n",
+        "  grassy = Taste('grassy')\n",
+        "  herbal = Taste('herbal')\n",
+        "  juicy = Taste('juicy')\n",
+        "  sweet = Taste('sweet')\n",
+        "  sour = Taste('sour')\n",
+        "  salty = Taste('salty')\n",
+        "  spicy = Taste('spicy')\n",
+        "  pungent = Taste('pungent')\n",
+        "  meaty = Taste('meaty')\n",
+        "  woody = Taste('woody')\n",
+        "  crisp = Taste('crisp')\n",
+        "  crunchy = Taste('crunchy')\n",
+        "  soggy = Taste('soggy')"
+      ],
+      "metadata": {
+        "id": "TiCwjLo8GHTB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  # defining possible emotions\n",
+        "\n",
+        "  attractive = Emotion('attractive')\n",
+        "  bold = Emotion('bold')\n",
+        "  brave = Emotion('brave')\n",
+        "  cheerful = Emotion('cheerful')\n",
+        "  comfortable = Emotion('comfortable')\n",
+        "  excited = Emotion('excited')\n",
+        "  festive = Emotion('festive')\n",
+        "  optimistic = Emotion('optimistic')\n",
+        "  proud = Emotion('proud')\n",
+        "  wonderful = Emotion('wonderful')\n",
+        "  happy = Emotion('happy')\n",
+        "  joyful = Emotion('joyful')\n",
+        "  serene = Emotion('serene')\n",
+        "  upbeat = Emotion('upbeat')\n",
+        "  dirty = Emotion('dirty')\n",
+        "  dejected = Emotion('dejected')\n",
+        "\tirritated = Emotion('irritated')\n",
+        "  pessimistic = Emotion('pessimistic')\n",
+        "  tearful = Emotion('tearful')\n",
+        "  tense = Emotion('tense')\n",
+        "  tired = Emotion('tired')\n",
+        "  weak = Emotion('weak')\n",
+        "  angry = Emotion('angry')\n",
+        "  gloomy = Emotion('gloomy')\n",
+        "  grumpy = Emotion('grumpy')\n",
+        "  mad = Emotion('mad')\n",
+        "  nervous = Emotion('mad')\n",
+        "  sad = Emotion('sad')\n",
+        "  guilty = Emotion('guilty')\n",
+        "  anxious = Emotion('anxious')\n",
+        "  cautious = Emotion('cautious')\n",
+        "  shy = Emotion('shy')\n",
+        "  calm = Emotion('calm')\n",
+        "  confident = Emotion('confident')\n",
+        "  surprised = Emotion('surprised')"
+      ],
+      "metadata": {
+        "id": "PkxJryOWG23b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  # defining possible action words\n",
+        "\n",
+        "  being = Action('being')\n",
+        "  having = Action('having')\n",
+        "  doing = Action('doing')\n",
+        "  saying = Action('saying')\n",
+        "  going = Action('going')\n",
+        "  getting = Action('getting')\n",
+        "  making = Action('making')\n",
+        "  thinking = Action('thinking')\n",
+        "  taking = Action('taking')\n",
+        "  seeing = Action('seeing')\n",
+        "  coming = Action('coming')\n",
+        "  using = Action('using')\n",
+        "  giving = Action('giving')\n",
+        "  working = Action('working')\n",
+        "  calling = Action('calling')\n",
+        "  asking = Action('asking')\n",
+        "  holding = Action('holding')\n",
+        "  putting = Action('putting')\n",
+        "  pushing = Action('pushing')\n",
+        "  pulling = Action('pulling')\n",
+        "  placing = Action('placing')\n",
+        "  walking = Action('walking')\n",
+        "  running = Action('running')\n",
+        "  dancing = Action('dancing')\n",
+        "  singing = Action('singing')\n",
+        "  keeping = Action('keeping')\n",
+        "  eating = Action('eating')\n",
+        "  cooking = Action('cooking')\n",
+        "  finding = Action('finding')\n",
+        "  moving = Action('moving')\n",
+        "  bringing = Action('bringing')\n",
+        "  writing = Action('writing')\n",
+        "  sitting = Action('sitting')\n",
+        "  sleeping = Action('sleeping')\n",
+        "  standing = Action('standing')\n",
+        "  meeting = Action('meeting')\n",
+        "  watching = Action('watching')\n",
+        "  winning = Action('winning')\n",
+        "  losing = Action('losing')\n",
+        "  buying = Action('buying')\n",
+        "  wearing = Action('wearing')\n",
+        "  baking = Action('baking')"
+      ],
+      "metadata": {
+        "id": "iOyUQL6FL_p1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  # defining possible positions\n",
+        "\n",
+        "  on = Position('on')\n",
+        "  above = Position('above')\n",
+        "  below = Position('below')\n",
+        "  inside = Position('inside') # not 'in' since it is a keyword\n",
+        "  outside = Position('outside')\n",
+        "  near = Position('near')\n",
+        "  far_away_from = Position('far_away_from')\n",
+        "  before = Position('before')\n",
+        "  after = Position('after')\n",
+        "  to_the_left_of = Position('to_the_left_of')\n",
+        "  to_the_right_of = Position('to_the_right_of')\n",
+        "  beside = Position('beside')\n",
+        "  over = Position('over')\n",
+        "  under = Position('under')\n",
+        "  on_top_of = Position('on_top_of')\n",
+        "  in_between = Position('in_between')\n",
+        "  next_to = Position('next_to')\n",
+        "  behind = Position('behind')\n",
+        "  in_front_of = Position('in_front_of')"
+      ],
+      "metadata": {
+        "id": "HTBkhFI-W3d3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  # defining vegetables\n",
+        "\n",
+        "  carrot = Vegetable(\"carrot\", has_shape=[long, conical, cylindrical], has_color=[yellow, orange], has_taste=[sweet,woody, crisp])\n",
+        "  eggplant= Vegetable(\"eggplant\", has_shape=[long, pear_shaped], has_color=[purple])\n",
+        "  cucumber = Vegetable(\"cucumber\", has_shape=[long, cylindrical], has_color=[green], has_taste=[juicy, crisp])\n",
+        "  zucchini = Vegetable(\"zucchini\", has_shape=[long, cylindrical], has_color=[green])\n",
+        "  potato = Vegetable(\"potato\", has_shape=[round], has_color=[yellow, white], has_taste=[sweet])\n",
+        "  pumpkin = Vegetable(\"pumpkin\", has_shape=[round],has_color=[yellow, orange], has_taste=[sweet])\n",
+        "  avocado = Vegetable(\"avocado\", has_shape=[pear_shaped], has_color=[green])\n",
+        "  mushroom = Vegetable(\"mushroom\", has_shape=[round], has_color=[gray])\n",
+        "  lettuce = Vegetable(\"lettuce\", has_shape=[round], has_color=[green], has_taste=[grassy])\n",
+        "  cabbage = Vegetable(\"cabbage\", has_shape=[round], has_color=[green])\n",
+        "  broccoli = Vegetable(\"broccoli\", has_color=[green])\n",
+        "  asparagus= Vegetable(\"asparagus\", has_shape=[cone, long], has_color=[green])\n",
+        "  capsicum = Vegetable(\"capsicum\", has_shape=[blocky], has_color=[green, red, yellow], has_taste=[spicy, crisp, sweet])\n",
+        "  pepper = Vegetable(\"pepper\", has_shape=[pointy, long], has_color=[green, red, yellow])\n",
+        "  chilli = Vegetable(\"chilli\", has_shape=[pointy, long], has_color=[green, red, yellow])\n",
+        "  onion = Vegetable(\"onion\", has_shape=[round], has_color=[white, purple], has_taste=[pungent])\n",
+        "  springonion = Vegetable(\"springonion\", has_shape=[long], has_color=[white, green], has_taste=[pungent])\n",
+        "  garlic = Vegetable(\"garlic\", has_shape=[round], has_color=[white], has_taste=[pungent])\n",
+        "  leek = Vegetable(\"leek\", has_shape=[long, cylindrical], has_color=[green], has_taste=[pungent])\n",
+        "  parsley = Vegetable(\"parsley\", has_color=[green], has_taste=[herbal, woody])"
+      ],
+      "metadata": {
+        "id": "e_8CcOqHY9Ca"
       },
       "execution_count": null,
       "outputs": []
